# tonbrige-contracts

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  foundry.toml  hardhat.config.ts  package.json  remappings.txt
contracts/: Validator.sol  Validator.t.sol
contracts/libraries/: Sha512.sol
contracts/parser/: BitReader.t.sol  BlockParser.sol  TransactionParser.t.sol  TreeOfCellsParser.sol
contracts/test/: ContractBTest.sol
contracts/tonbridge_bridge/: Cargo.toml
contracts/tonbridge_bridge/src/: adapter.rs  bridge.rs  channel.rs  contract.rs  error.rs  fee.rs  helper.rs  lib.rs  state.rs
contracts/tonbridge_bridge/src/testing/: bridge.rs  contract.rs  mock.rs  mod.rs
contracts/tonbridge_bridge/src/testing/testdata/: cw-tonbridge-bridge.wasm  cw-tonbridge-validator.wasm
contracts/tonbridge_validator/: Cargo.toml
contracts/tonbridge_validator/src/: contract.rs  error.rs  signature_validator.rs  state.rs  validator.rs
contracts/tonbridge_validator/src/testing/: contract.rs  mod.rs  signature_validator.rs  validator.rs
contracts/tonbridge_validator/src/testing/testdata/: bocs.hex  bocs_large.hex  keyblock_with_next_val.hex  master_proof.hex  masterchain_block_sig.json  new_keyblock_bocs.hex  new_keyblock_sig.json
contracts/validator/: SignatureValidator.t.sol
rust-contracts-sdk/: README.md  package.json
rust-contracts/tonbridge_adapter/: Cargo.toml
rust-contracts/tonbridge_adapter/src/: adapter.rs  contract.rs  lib.rs
rust-contracts/tonbridge_bridge/: Cargo.toml
rust-contracts/tonbridge_bridge/src/: bridge.rs  contract.rs  error.rs  lib.rs  state.rs
rust-contracts/tonbridge_validator/: Cargo.toml  README.md
rust-contracts/tonbridge_validator/src/: contract.rs  error.rs  lib.rs  signature_validator.rs  state.rs  validator.rs  wrapper.rs
test/: transaction-1.test.ts
test/data/: transaction-1.ts
test/functions/: utils.test.ts
