[workspace]
resolver = '2'

members = ["packages/*", "rust-contracts/*"]


[workspace.package]
version = "0.2.0"
authors = ["Terraform Labs, PTE.", "Oraichain Labs"]
edition = "2021"
license = "MIT"
repository = "https://github.com/oraichain/tonbrige-contracts.git"
homepage = "https://orai.io"
documentation = "https://github.com/oraichain/tonbrige-contracts.git"
exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

[workspace.dependencies]
cosmwasm-std = { version = "=1.2" }
cosmwasm-schema = { version = "=1.2" }
cosmwasm-storage = { version = "=1.2" }
cosmwasm-vm = { version = "=1.2" }

thiserror = "1.0.26"

cw2 = { version = "1.0.1" }
cw20 = { version = "1.0.1" }
cw20-base = { version = "1.0.1" }
cw-storage-plus = { version = "1.0.1" }
cw-controllers = "1.0.1"
cw-utils = "1.0.1"
sha2 = "0.10.8"

oraiswap = { git = "https://github.com/oraichain/oraiswap.git", rev = "03f4955b" }
cw20-ics20-msg = { git = "https://github.com/oraichain/ibc-bridge-wasm.git", rev = "0a33b5ade31419b82617d0b3ab7958899d9598b7" }

tonbridge-parser = { path = "./packages/parser" }
tonbridge-validator = { path = "./packages/validator" }
tonbridge-bridge = { path = "./packages/bridge" }
cw-tonbridge-validator = { path = "./rust-contracts/tonbridge_validator" }
tonlib = { git = "https://github.com/oraichain/tonlib-rs.git", rev = "8efb9384acf219e9a27e010b65c507a574ff794f" }
cw-multi-test = "0.16.6"
bech32 = "0.11.0"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
codegen-units = 1
incremental = false
rpath = false
lto = true
overflow-checks = true
panic = 'abort'
