[workspace]
resolver = '2'

members = ["packages/*", "contracts/*"]


[workspace.package]
version = "0.2.0"
authors = ["Oraichain Labs"]
edition = "2021"
license = "MIT"
repository = "https://github.com/oraichain/tonbridge-cw-contracts.git"
homepage = "https://orai.io"
documentation = "https://github.com/oraichain/tonbridge-cw-contracts.git"
exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

[workspace.dependencies]
cosmwasm-std = { version = "=1.2" }
cosmwasm-schema = { version = "=1.2" }
cosmwasm-storage = { version = "=1.2" }

thiserror = "1.0.26"

cw2 = { version = "1.0.1" }
cw20 = { version = "1.0.1" }
cw20-base = { version = "1.0.1" }
cw-storage-plus = { version = "1.0.1" }
cw-controllers = "1.0.1"
cw-utils = "1.0.1"
sha2 = "0.10.8"

tonbridge-parser = { path = "./packages/parser" }
tonbridge-validator = { path = "./packages/validator" }
tonbridge-bridge = { path = "./packages/bridge" }
cw-tonbridge-validator = { path = "./contracts/tonbridge_validator" }

oraiswap = { git = "https://github.com/oraichain/oraiswap.git", rev = "f2c1cec" }
cw20-ics20-msg = { git = "https://github.com/oraichain/ibc-bridge-wasm.git", rev = "0e0258c" }
tonlib = { git = "https://github.com/oraichain/tonlib-rs.git", rev = "f9f15c8", default-features = false }
cw-multi-test = "0.16.6"

[patch.crates-io]
curve25519-dalek = { git = 'https://github.com/dalek-cryptography/curve25519-dalek.git' }

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
codegen-units = 1
incremental = false
rpath = false
lto = true
overflow-checks = true
panic = 'abort'
