[workspace]
resolver = '2'

members = ["packages/*", "contracts/*"]


[workspace.package]
version = "0.2.0"
authors = ["Oraichain Labs"]
edition = "2021"
license = "MIT"
repository = "https://github.com/oraichain/tonbridge-cw-contracts.git"
homepage = "https://orai.io"
documentation = "https://github.com/oraichain/tonbridge-cw-contracts.git"
exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

[workspace.dependencies]
cosmwasm-std = { version = "1.5" }
cosmwasm-schema = { version = "1.5" }
cosmwasm-storage = { version = "1.5" }

thiserror = "1.0.26"

cw2 = { version = "1.0.1" }
cw20 = { version = "1.0.1" }
cw20-base = { version = "1.0.1" }
cw-storage-plus = { version = "1.0.1" }
cw-controllers = "1.0.1"
cw-utils = "1.0.1"
sha2 = "0.10.8"

tonbridge-parser = { path = "./packages/parser" }
tonbridge-validator = { path = "./packages/validator" }
tonbridge-bridge = { path = "./packages/bridge" }
cw-tonbridge-validator = { path = "./contracts/tonbridge_validator" }
derive_more = "0.99.17"
oraiswap = { git = "https://github.com/oraichain/oraiswap.git", rev = "c5fd186" }
tonlib = { git = "https://github.com/oraichain/tonlib-rs.git", rev = "eb28f37", default-features = false }
cosmwasm-testing-util = { git = "https://github.com/oraichain/cosmwasm-testing-util.git", rev = "1b9c412" }
tokenfactory = { git = "https://github.com/oraichain/token-bindings.git", rev = "7861576" }
token-bindings = { git = "https://github.com/oraichain/token-bindings.git", rev = "7861576" }
skip = { git = "https://github.com/oraichain/osor-api-contracts.git", rev = "0655922173b4ac37c5e63f451eb9bc33c7ac8159" }

[patch.crates-io]
curve25519-dalek = { git = 'https://github.com/dalek-cryptography/curve25519-dalek.git' }

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
codegen-units = 1
incremental = false
rpath = false
lto = true
overflow-checks = true
panic = 'abort'
