[package]
name = "cw-tonbridge-bridge"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
exclude = { workspace = true }
description = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cw20 = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cw-controllers = { workspace = true }
cw-utils = { workspace = true }
cosmwasm-schema = { workspace = true }
tonbridge-parser = { workspace = true }
tonbridge-validator = { workspace = true }
thiserror = { workspace = true }
tonbridge-bridge = { workspace = true }
tonlib = { workspace = true }
oraiswap = { workspace = true }
token-bindings = { workspace = true }
tokenfactory = { workspace = true }
derive_more = { workspace = true }
skip = { workspace = true }

[dev-dependencies]
cosmwasm-testing-util = { workspace = true }
cw-tonbridge-validator = { workspace = true }
cw20-base = { workspace = true }
